fix: apply same stylings on mobile

--- a/packages/wallets/src/features/cfd/screens/CompareAccounts/InstrumentsLabelHighlighted.scss
+++ b/packages/wallets/src/features/cfd/screens/CompareAccounts/InstrumentsLabelHighlighted.scss
@@ -8,8 +8,6 @@
     }
 
     &--demo {
-        @include desktop {
-            padding-top: 1.6rem;
-        }
+        padding-top: 1.6rem;
     }
 }
